feat(api): add restore and delete endpoints by group code
- Add restore endpoint
- Add restore by group code endpoint
- Add delete endpoint
- Add force delete by group code endpoint
